# ititer

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  requirements.txt  setup.cfg
docs/: advanced.rst  changelog.rst  citation.rst  commands.rst  conf.py  index.rst  inference.rst  inflection-titers-example.csv  prior-predictive.py  quick.rst  requirements.txt  tutorial.py  tutorial.rst  wide-example.csv
docs/_static/: custom.css
ititer/: __init__.py  ititer.py
py/ititer/: LICENSE.md  README.md  setup.cfg
py/ititer/data/: od.csv
py/ititer/docs/: conf.py  endpoints-example.csv  index.rst  inflections-example.csv  long-example.csv  tutorial.py  tutorial.rst
py/ititer/docs/_static/: custom.css
py/ititer/ititer/: __init__.py  ititer.py
py/ititer/test/: test_ititer.py
test/: test_ititer.py
