[metadata]
author = David J. Pattinson
author_email = david.pattinson@wisc.edu
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
description = Infer inflection and endpoint titers from serial dilution assays using Bayesian hierarchical modelling.
download_url = https://github.com/IRI-UW-Bioinformatics/ititer/archive/refs/tags/0.1.1.tar.gz
keywords = bayesian, dose response, dose, response, virology, elisa, sigmoid
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = David J. Pattinson
maintainer_email = david.pattinson@wisc.edu
name = ititer
platforms =
    Linux
    MacOS
    Windows
url = https://github.com/IRI-UW-Bioinformatics/ititer
version = attr: ititer.__version__
license_file = LICENSE.md

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    arviz>=0.11.2
    numpy>=1.21.0
    matplotlib>=3.4.2
    pandas>=1.3.0
    pymc3>=3.11.2
setup_requires =
    sphinx>=4.1.2
test_requires =
    pytest>=6.2.4
